styles/main.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@font-face {
    font-family: "London-Underground";
    src: url("../media/london-underground-regular.ttf");
}


/* DEFAULT ELEMENTS */

body {
    background-color: #141414;
    line-height: 1.65rem;
    margin: 0;
    display: flex;
    flex-direction: column;
    align-content: center;
    overflow-y: auto;
    letter-spacing: 0.02rem;
}

main {
    margin: 30vh 29vw 20vh;
    transform: translateX(7px);
}

::selection {background: #3d3d3d;}

h1 {
    font-family: "London-Underground", "serif";
    font-size: 1rem;
    letter-spacing: normal;

    color: #2F2F2F;

    padding-top: 200px;
    margin-bottom: 80px;
}

h2 {
    font-family: "Inter", "sans-serif";
    font-weight: 600;
    font-size: 1rem;
}

h3 {
    font-family: "London-Underground", "serif";
    font-size: 0.75rem;
    letter-spacing: 0.15rem;
}

a {
    color: #999999;
    text-decoration: none;
}

p {
    font-family: "Inter", "sans-serif";
    font-weight: 400;
    font-size: 1rem;
    color: #e3e3e3;
}

.section {
    display: block;
    overflow: hidden;

    padding-top: 150px;
}


/* On-Load Effects */

.main {
    opacity: 0;
    transition: all 1s;
}

.main #name .hero-title {
    line-height: 11rem;
    transition: all 1s;
}

.main.after {opacity: 1;}

.main.after #name .hero-title {line-height: 10rem;}


/* NAV SECTION */

nav {
    width: 100vw;
    position: fixed;
    height: 5rem;

    background-image: linear-gradient(rgba(20, 20, 20, 1.0), rgba(20, 20, 20, 0.0));
    z-index: 1000;
}


/* HERO SECTION */

.hero-title {
    padding: 0;
    margin:0;

    text-align: left;
    color: white;
    letter-spacing: 7vw;
    line-height: 10rem;
}

.dot {
    color: #141414;
    letter-spacing: 8vw;
    text-align: center;
    line-height: 6rem;

    transform: translate(3.3vw, -4rem);
}

.fading-dot {
    padding: 0;
    margin-right: 1vw;
    transform: translateY(3px);

    color: white;
    opacity: 0.2;

    line-height: 8rem;
}

#name {
    display: block;
    gap: 1rem;
    width: 25vw;
    height: 500px;

    padding-top: 0;
    margin: 0 auto 10rem auto;

    transition: all 0.7s;
}

#name:hover {width: 28vw;}


/* EXPERIENCE SECTION */

.timeline-holder {
    display: flex;
    justify-content: center;
    gap: 4rem;

    margin-left: auto;
    margin-right: auto;
}

.line {
    width: 1px;
    height: 200px;
    background-color: #2F2F2F;

    margin-left: auto;
    margin-right: auto;
}

.timeline-dot {
    width: 5px;
    height: 5px;
    background-color: #2F2F2F;
    border-radius: 50%;

    margin: 10px auto;
}

.timeline-block {width: 12rem;}

.timeline-text {
    height: 160px;
    margin-bottom: 65px;
    transition: all 0.3s;
}

.timeline-text:hover {
    transform: translateY(-5px);
    z-index: 10;
}

.timeline-text:hover .card-title {color: white;}

.timeline-space {height: 215px;}


/* PROJECTS SECTION */

#projects {
    /*border: 1px solid yellow;*/
    display: flex;
    flex-direction: column;
    align-content: center;

}

.card-holder {
    display: flex;
    flex-wrap: nowrap;
    gap: 10px;
    overflow-x: auto;
    scrollbar-width: none;
}

.card {
    height: 200px;
    transition: all 0.3s;
}

.row {
    display: flex;
    flex-direction: column;
    gap: 10px;
    width: calc((42vw - 20px) / 3); /* 100vw - margins - gaps / 3 */
    min-width: 175px;
}

.card:hover{
    transform: translateY(-5px);
    z-index: 10;
}

.card:hover .card-title {color: white;}

.card-title {
    color: #e3e3e3;
    padding-bottom: 0.25rem;
    transition: all 0.3s;
}

.card-description {
    font-weight: 400;
    color: #999999;
}


/* ABOUT SECTION */

.link-holder {
    display: flex;
    gap: 1.5vw;

    margin-top: 3rem;
}

.social-text {
    color: #999999;
    transition: all 0.7s;
}

.social-text:hover {color: white;}


/* SCROLLBAR */

::-webkit-scrollbar {
    width: 8px;
    position: fixed;
}

::-webkit-scrollbar-track {background: transparent;}

::-webkit-scrollbar-thumb {
    background: #1e1e1e;
    border-radius: 5px;
    z-index: 1;
    transition: all 1s;
}

::-webkit-scrollbar-thumb:hover {background: #2c2c2c;}


@media (max-width: 1300px) {
    main {
        margin-left: 20vw;
        margin-right: 20vw;
    }

    .row {width: calc((60vw - 20px) / 3);}

    .link-holder {gap: 3vw;}

    #name {width: 30vw;}

    #name:hover {width: 30vw;}
}


/* Mobile */
@media (max-width: 800px) and (orientation: portrait) {
    main {
        margin: 200px 7vw 10vh;
        transform: translateX(0);
    }

    .section {padding-top: 100px;}

    .timeline-holder {gap: 3rem;}

    .row {width: calc((86vw - 20px) / 3);}

    .section-head {letter-spacing: 5vw;}

    .link-holder {gap: 3vw;}

    .hero-title {letter-spacing: 12vw;}

    #name {
        transform:translateX(3px);
        gap: 1rem;
        width: 50vw;
    }

    /* Disable hero text animation for mobile */

    #name:hover {transform:translateX(3px)}

    #name:hover {width: 50vw;}
}

